<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".CalcFragment"
    android:weightSum="9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/text0"
        android:gravity="center|end"
        android:padding="10dp"
        android:maxLength="15"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:textColorHint="#858585"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|end"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#858585"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorSecondaryLite"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/log"
            android:id="@+id/log_btn"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/ln_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ln"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/xⁿ_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/power"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sqr_root_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Sq_root"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fact_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Factorial"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorSecondaryLite"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="5">

        <Button
            android:id="@+id/pi_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Pi"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sin_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cos_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/tan_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/inv_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inv_btn"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btn_7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_7"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_8"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />


        <Button
            android:id="@+id/btn_9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_9"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/add_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_btn"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/backspace_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/backspace_button"
            android:src="@drawable/ic_backspace_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btn_4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_4"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_5"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />


        <Button
            android:id="@+id/btn_6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Btn_6"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sub_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sub_btn"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clr_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/clr_btn"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/btn_1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Btn_1"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Btn_2"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="24sp" />


                <Button
                    android:id="@+id/btn_3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Btn_3"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/mul_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Mul_Btn"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/btn_0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Btn_0"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_dot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Decimal"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/div_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Div_btn"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/equ_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Equal"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>